Overflow Fix

--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@
 
 .section-title a {
     margin-top: -90px;
+    margin-right: 0;
 }
 
 .section-title a h1 {
@@ -31,6 +32,7 @@
     text-justify: inter-character;
     padding: 20px; */
 
+    margin-right: 0;
     padding: 20px;
     padding-top: 15px;
     z-index: 1;
